# glostache

./: .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  main.cpp
include/glo/: json_x_mustache.h  stache.h
src/: CMakeLists.txt
src/glo/: json_x_mustache.cpp  stache.cpp
test/: CMakeLists.txt  main.cpp
